// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it goes in and out of edit mode 1`] = `
.emotion-49 article > p {
  font-family: Source Sans Pro !important;
}

.emotion-47 {
  position: absolute;
  width: 100%;
  z-index: 2;
}

.emotion-0 {
  position: fixed;
  top: 0;
  left: 0;
  height: 100vh;
  width: 100vw;
  z-index: 1;
  background: rgba(0,0,0,0.3);
  -webkit-animation-duration: 400ms;
  animation-duration: 400ms;
  -webkit-animation-name: fadeIn;
  animation-name: fadeIn;
}

.emotion-20 {
  position: relative;
  border: 2px solid #a5bcd3;
  padding: 52px;
  padding-top: 0;
  background-color: #fff;
  z-index: 1;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  z-index: 1;
}

.emotion-4 figure {
  position: static !important;
}

.emotion-2 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-16 {
  position: relative;
  -webkit-flex: 1 0 50%;
  -ms-flex: 1 0 50%;
  flex: 1 0 50%;
  max-width: 600px;
}

.emotion-16 > article {
  max-width: 100%;
}

.emotion-10 {
  margin-top: 6.5px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-10:first-of-type {
  margin-top: 0;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  background: #f8f8f8;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  border: 1px solid #eff0f2;
  -webkit-transition: border-color 100ms ease;
  transition: border-color 100ms ease;
  border-radius: 4px;
  min-height: 52px;
  padding-right: 13px;
}

.emotion-8:focus-within {
  border-color: #20588f;
}

.emotion-8 input,
.emotion-8 textarea {
  width: inherit;
  font-weight: 400;
  color: #444;
  font-size: 18;
  font-size: 1rem;
  line-height: 1.3;
  background: none;
  border: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.emotion-8 input:focus,
.emotion-8 textarea:focus {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  outline: none;
}

.emotion-8 input {
  padding: 6.5px 13px;
}

.emotion-8 textarea {
  padding: 0 13px;
  height: 20px;
  margin: 14px 0;
  resize: none;
}

.emotion-8 .c-icon {
  width: 24px;
  height: 24px;
}

.emotion-12 {
  margin: 10px 0;
}

.emotion-14 {
  display: inline-block;
  color: #ffffff;
  background-color: #20588f;
  border: 2px solid #20588f;
  border-radius: 4px;
  padding: 4px 13px;
  outline-width: 0;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-size: 0.8888888888888888rem;
  line-height: 1.625;
  font-family: 'Source Sans Pro',Helvetica,Arial,STKaiti,'华文楷体',KaiTi,SimKai,'楷体',KaiU,DFKai-SB,'標楷體',SongTi,'宋体',sans-serif;
  font-weight: 700;
  -webkit-transition: all .2s cubic-bezier(0.17,0.04,0.03,0.94);
  transition: all .2s cubic-bezier(0.17,0.04,0.03,0.94);
  box-shadow: none;
  text-align: center;
}

.emotion-14:hover,
.emotion-14:focus {
  color: white;
  background-color: #184673;
  border: 2px solid #184673;
}

.emotion-14[disabled] {
  color: #777777;
  background-color: #e6e6e6;
  border-color: transparent;
  cursor: not-allowed;
}

.emotion-14:focus {
  box-shadow: 0 0 2px #20588f;
}

.emotion-18 {
  display: inline-block;
  color: #ffffff;
  background-color: #20588f;
  border: 2px solid #20588f;
  border-radius: 4px;
  padding: 4px 13px;
  outline-width: 0;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-size: 0.8888888888888888rem;
  line-height: 1.625;
  font-family: 'Source Sans Pro',Helvetica,Arial,STKaiti,'华文楷体',KaiTi,SimKai,'楷体',KaiU,DFKai-SB,'標楷體',SongTi,'宋体',sans-serif;
  font-weight: 700;
  -webkit-transition: all .2s cubic-bezier(0.17,0.04,0.03,0.94);
  transition: all .2s cubic-bezier(0.17,0.04,0.03,0.94);
  box-shadow: none;
  text-align: center;
  -webkit-transition: background-color none;
  transition: background-color none;
  padding: 0;
  border-radius: 0;
  color: inherit;
  font-size: inherit;
  background-color: transparent;
  box-shadow: none;
  border: none;
  font-weight: 400;
  position: absolute;
  top: 0.1rem;
  right: 0.2rem;
  color: #d1372e;
}

.emotion-18:hover,
.emotion-18:focus {
  color: white;
  background-color: #184673;
  border: 2px solid #184673;
}

.emotion-18[disabled] {
  color: #777777;
  background-color: #e6e6e6;
  border-color: transparent;
  cursor: not-allowed;
}

.emotion-18:focus {
  box-shadow: 0 0 2px #20588f;
}

.emotion-18:hover,
.emotion-18:active,
.emotion-18:disabled,
.emotion-18:focus {
  box-shadow: none;
  color: #20588f;
  background-color: transparent;
  border: none;
}

.emotion-18:focus {
  outline-width: medium;
}

.emotion-18:hover,
.emotion-18:focus {
  color: #7d211c;
}

.emotion-6 {
  border: calc(26px / 6.5) solid rgba(0,0,0,0.1);
  border-bottom-color: #20588f;
  border-radius: 50%;
  -webkit-animation: spinnerAnimation 0.7s linear infinite;
  animation: spinnerAnimation 0.7s linear infinite;
  height: 26px;
  width: 26px;
  display: block;
  margin: 0;
}

.emotion-45 {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0,0,0,0.8);
  z-index: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-43 {
  background-color: #f8f8f8;
  box-shadow: 0 0 2px 0 rgba(115,115,115,0.5);
  width: 620px;
  border-radius: 5px;
  position: absolute;
  top: 5%;
  z-index: 2;
  max-height: 90vh;
  overflow: auto;
}

.emotion-27 {
  background: linear-gradient(180deg,#5d97a9,#508a9c);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 1.2rem;
  padding-left: 13px;
  height: 50px;
  color: #f8f8f8;
}

.emotion-25 {
  display: inline-block;
  color: #ffffff;
  background-color: #20588f;
  border: 2px solid #20588f;
  border-radius: 4px;
  padding: 4px 13px;
  outline-width: 0;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-size: 0.8888888888888888rem;
  line-height: 1.625;
  font-family: 'Source Sans Pro',Helvetica,Arial,STKaiti,'华文楷体',KaiTi,SimKai,'楷体',KaiU,DFKai-SB,'標楷體',SongTi,'宋体',sans-serif;
  font-weight: 700;
  -webkit-transition: all .2s cubic-bezier(0.17,0.04,0.03,0.94);
  transition: all .2s cubic-bezier(0.17,0.04,0.03,0.94);
  box-shadow: none;
  text-align: center;
  -webkit-transition: background-color none;
  transition: background-color none;
  padding: 0;
  border-radius: 0;
  color: inherit;
  font-size: inherit;
  background-color: transparent;
  box-shadow: none;
  border: none;
  font-weight: 400;
  height: 50px;
  width: 50px;
}

.emotion-25:hover,
.emotion-25:focus {
  color: white;
  background-color: #184673;
  border: 2px solid #184673;
}

.emotion-25[disabled] {
  color: #777777;
  background-color: #e6e6e6;
  border-color: transparent;
  cursor: not-allowed;
}

.emotion-25:focus {
  box-shadow: 0 0 2px #20588f;
}

.emotion-25:hover,
.emotion-25:active,
.emotion-25:disabled,
.emotion-25:focus {
  box-shadow: none;
  color: #20588f;
  background-color: transparent;
  border: none;
}

.emotion-25:focus {
  outline-width: medium;
}

.emotion-24 {
  height: 24px;
  width: 24px;
  margin-right: 7px;
}

.emotion-41 {
  padding: 2em;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.emotion-37 {
  width: 100%;
}

.emotion-37 > * {
  width: 100%;
}

.emotion-37 form {
  background-color: white;
}

.emotion-39 {
  display: inline-block;
  color: #ffffff;
  background-color: #20588f;
  border: 2px solid #20588f;
  border-radius: 4px;
  padding: 4px 13px;
  outline-width: 0;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-size: 0.8888888888888888rem;
  line-height: 1.625;
  font-family: 'Source Sans Pro',Helvetica,Arial,STKaiti,'华文楷体',KaiTi,SimKai,'楷体',KaiU,DFKai-SB,'標楷體',SongTi,'宋体',sans-serif;
  font-weight: 700;
  -webkit-transition: all .2s cubic-bezier(0.17,0.04,0.03,0.94);
  transition: all .2s cubic-bezier(0.17,0.04,0.03,0.94);
  box-shadow: none;
  text-align: center;
  -webkit-transition: background-color none;
  transition: background-color none;
  padding: 0;
  border-radius: 0;
  color: inherit;
  font-size: inherit;
  background-color: transparent;
  box-shadow: none;
  border: none;
  font-weight: 400;
}

.emotion-39:hover,
.emotion-39:focus {
  color: white;
  background-color: #184673;
  border: 2px solid #184673;
}

.emotion-39[disabled] {
  color: #777777;
  background-color: #e6e6e6;
  border-color: transparent;
  cursor: not-allowed;
}

.emotion-39:focus {
  box-shadow: 0 0 2px #20588f;
}

.emotion-39:hover,
.emotion-39:active,
.emotion-39:disabled,
.emotion-39:focus {
  box-shadow: none;
  color: #20588f;
  background-color: transparent;
  border: none;
}

.emotion-39:focus {
  outline-width: medium;
}

.emotion-39,
.emotion-39:hover {
  border-radius: 5px;
  background-color: white;
  margin-top: 26px;
  padding: 3px 52px;
}

<div>
  <div
    autocapitalize="false"
    autocorrect="false"
    contenteditable="true"
    data-slate-editor="true"
    data-slate-node="value"
    role="textbox"
    spellcheck="false"
    style="position: relative; outline: none; white-space: pre-wrap; word-wrap: break-word;"
    zindex="-1"
  >
    <div
      data-slate-node="element"
      style="position: relative;"
    >
      <div
        data-slate-node="element"
        style="position: relative;"
      >
        <span
          data-slate-node="text"
        >
          <span
            data-slate-leaf="true"
          >
            <span
              data-slate-length="0"
              data-slate-zero-width="n"
            >
              ﻿
              <br />
            </span>
          </span>
        </span>
      </div>
    </div>
  </div>
  <div
    class="emotion-47 emotion-48"
    contenteditable="false"
  >
    <div
      aria-hidden="true"
      class="emotion-0 emotion-1"
    />
    <div
      class="emotion-20 emotion-21"
    >
      <h1
        class="c-section-heading c-related-articles__component-title"
      >
        Relatert innhold
      </h1>
      <p>
        Dra artikkel for å endre rekkefølge
      </p>
      <div
        class="emotion-4 emotion-5"
      >
        <div
          class="drop-zone emotion-2 emotion-3"
        />
      </div>
      <div
        class="emotion-16 emotion-17"
        data-cy="styled-article-modal"
      >
        <div
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-labelledby="downshift-0-label"
          role="combobox"
          style="position: relative;"
        >
          <div>
            <div
              class="emotion-10 emotion-11"
            >
              <div
                class="emotion-8 emotion-9"
              >
                <input
                  aria-autocomplete="list"
                  aria-labelledby="downshift-0-label"
                  autocomplete="off"
                  data-testid="dropdownInput"
                  id="downshift-0-input"
                  placeholder="Søk på tittel"
                  value=""
                />
                <div
                  class="emotion-6 emotion-7"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="emotion-12 emotion-13"
        >
          Eller
        </div>
        <button
          class="emotion-14 emotion-15"
          data-testid="showAddExternal"
          type="button"
        >
          Legg til ekstern artikkel
        </button>
      </div>
      <button
        class="emotion-18 emotion-15"
        contenteditable="false"
        data-cy="close-related-button"
        type="button"
      >
        <svg
          class="c-icon"
          data-license="Apache License 2.0"
          data-source="Material Design"
          fill="currentColor"
          height="1em"
          preserveAspectRatio="xMidYMid meet"
          style="vertical-align: middle;"
          viewBox="0 0 24 24"
          width="1em"
        >
          <g>
            <path
              d="M0 0h24v24H0V0z"
              fill="none"
            />
            <path
              d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zm2.46-7.12l1.41-1.41L12 12.59l2.12-2.12 1.41 1.41L13.41 14l2.12 2.12-1.41 1.41L12 15.41l-2.12 2.12-1.41-1.41L10.59 14l-2.13-2.12zM15.5 4l-1-1h-5l-1 1H5v2h14V4z"
            />
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
          </g>
        </svg>
      </button>
    </div>
    <div
      class="emotion-45 emotion-46"
    >
      <div
        aria-hidden="true"
        class="emotion-0 emotion-1"
      />
      <div
        class="emotion-43 emotion-44"
      >
        <div
          class="emotion-27 emotion-28"
        >
          Skriv inn tittel og url på ekstern artikkel
          <button
            class="emotion-25 emotion-15"
            type="button"
          >
            <svg
              class="c-icon emotion-24"
              data-license="Apache License 2.0"
              data-source="Material Design"
              fill="currentColor"
              height="1em"
              preserveAspectRatio="xMidYMid meet"
              style="vertical-align: middle;"
              viewBox="0 0 24 24"
              width="1em"
            >
              <g>
                <path
                  d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                />
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
              </g>
            </svg>
          </button>
        </div>
        <div
          class="emotion-41 emotion-42"
        >
          <div
            class="emotion-37 emotion-38"
          >
            <div>
              <div
                class="emotion-10 emotion-11"
              >
                <div
                  class="emotion-8 emotion-9"
                >
                  <input
                    data-testid="addExternalTitleInput"
                    placeholder="Tittel"
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
            <div>
              <div
                class="emotion-10 emotion-11"
              >
                <div
                  class="emotion-8 emotion-9"
                >
                  <input
                    data-testid="addExternalUrlInput"
                    placeholder="https://example.com"
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
          <button
            class="emotion-39 emotion-15"
            data-testid="taxonomyLightboxButton"
            type="button"
          >
            Lagre
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    class="emotion-49"
    contenteditable="false"
    data-testid="relatedWrapper"
    draggable="true"
    role="button"
    tabindex="0"
  >
    <section
      class="c-related-articles"
    >
      <h2
        class="c-section-heading c-related-articles__component-title"
      >
        Relatert innhold
      </h2>
      <div
        class="c-related-articles__articles"
      />
    </section>
  </div>
</div>
`;

exports[`it goes in and out of edit mode 2`] = `
.emotion-29 article > p {
  font-family: Source Sans Pro !important;
}

.emotion-27 {
  position: absolute;
  width: 100%;
  z-index: 2;
}

.emotion-0 {
  position: fixed;
  top: 0;
  left: 0;
  height: 100vh;
  width: 100vw;
  z-index: 1;
  background: rgba(0,0,0,0.3);
  -webkit-animation-duration: 400ms;
  animation-duration: 400ms;
  -webkit-animation-name: fadeIn;
  animation-name: fadeIn;
}

.emotion-25 {
  position: relative;
  border: 2px solid #a5bcd3;
  padding: 52px;
  padding-top: 0;
  background-color: #fff;
  z-index: 1;
}

.emotion-11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  z-index: 1;
}

.emotion-11 figure {
  position: static !important;
}

.emotion-9 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-7 {
  position: relative;
  -webkit-flex: 1 0 50%;
  -ms-flex: 1 0 50%;
  flex: 1 0 50%;
  max-width: 600px;
}

.emotion-7 > article {
  max-width: 100%;
}

.emotion-15 {
  margin-top: 6.5px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-15:first-of-type {
  margin-top: 0;
}

.emotion-13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  background: #f8f8f8;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  border: 1px solid #eff0f2;
  -webkit-transition: border-color 100ms ease;
  transition: border-color 100ms ease;
  border-radius: 4px;
  min-height: 52px;
  padding-right: 13px;
}

.emotion-13:focus-within {
  border-color: #20588f;
}

.emotion-13 input,
.emotion-13 textarea {
  width: inherit;
  font-weight: 400;
  color: #444;
  font-size: 18;
  font-size: 1rem;
  line-height: 1.3;
  background: none;
  border: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.emotion-13 input:focus,
.emotion-13 textarea:focus {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  outline: none;
}

.emotion-13 input {
  padding: 6.5px 13px;
}

.emotion-13 textarea {
  padding: 0 13px;
  height: 20px;
  margin: 14px 0;
  resize: none;
}

.emotion-13 .c-icon {
  width: 24px;
  height: 24px;
}

.emotion-17 {
  margin: 10px 0;
}

.emotion-19 {
  display: inline-block;
  color: #ffffff;
  background-color: #20588f;
  border: 2px solid #20588f;
  border-radius: 4px;
  padding: 4px 13px;
  outline-width: 0;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-size: 0.8888888888888888rem;
  line-height: 1.625;
  font-family: 'Source Sans Pro',Helvetica,Arial,STKaiti,'华文楷体',KaiTi,SimKai,'楷体',KaiU,DFKai-SB,'標楷體',SongTi,'宋体',sans-serif;
  font-weight: 700;
  -webkit-transition: all .2s cubic-bezier(0.17,0.04,0.03,0.94);
  transition: all .2s cubic-bezier(0.17,0.04,0.03,0.94);
  box-shadow: none;
  text-align: center;
}

.emotion-19:hover,
.emotion-19:focus {
  color: white;
  background-color: #184673;
  border: 2px solid #184673;
}

.emotion-19[disabled] {
  color: #777777;
  background-color: #e6e6e6;
  border-color: transparent;
  cursor: not-allowed;
}

.emotion-19:focus {
  box-shadow: 0 0 2px #20588f;
}

.emotion-5 {
  display: inline-block;
  color: #ffffff;
  background-color: #20588f;
  border: 2px solid #20588f;
  border-radius: 4px;
  padding: 4px 13px;
  outline-width: 0;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-size: 0.8888888888888888rem;
  line-height: 1.625;
  font-family: 'Source Sans Pro',Helvetica,Arial,STKaiti,'华文楷体',KaiTi,SimKai,'楷体',KaiU,DFKai-SB,'標楷體',SongTi,'宋体',sans-serif;
  font-weight: 700;
  -webkit-transition: all .2s cubic-bezier(0.17,0.04,0.03,0.94);
  transition: all .2s cubic-bezier(0.17,0.04,0.03,0.94);
  box-shadow: none;
  text-align: center;
  -webkit-transition: background-color none;
  transition: background-color none;
  padding: 0;
  border-radius: 0;
  color: inherit;
  font-size: inherit;
  background-color: transparent;
  box-shadow: none;
  border: none;
  font-weight: 400;
  position: absolute;
  top: 0.1rem;
  right: 0.2rem;
  color: #d1372e;
}

.emotion-5:hover,
.emotion-5:focus {
  color: white;
  background-color: #184673;
  border: 2px solid #184673;
}

.emotion-5[disabled] {
  color: #777777;
  background-color: #e6e6e6;
  border-color: transparent;
  cursor: not-allowed;
}

.emotion-5:focus {
  box-shadow: 0 0 2px #20588f;
}

.emotion-5:hover,
.emotion-5:active,
.emotion-5:disabled,
.emotion-5:focus {
  box-shadow: none;
  color: #20588f;
  background-color: transparent;
  border: none;
}

.emotion-5:focus {
  outline-width: medium;
}

.emotion-5:hover,
.emotion-5:focus {
  color: #7d211c;
}

.emotion-3 {
  display: inline-block;
  color: #ffffff;
  background-color: #20588f;
  border: 2px solid #20588f;
  border-radius: 4px;
  padding: 4px 13px;
  outline-width: 0;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-size: 0.8888888888888888rem;
  line-height: 1.625;
  font-family: 'Source Sans Pro',Helvetica,Arial,STKaiti,'华文楷体',KaiTi,SimKai,'楷体',KaiU,DFKai-SB,'標楷體',SongTi,'宋体',sans-serif;
  font-weight: 700;
  -webkit-transition: all .2s cubic-bezier(0.17,0.04,0.03,0.94);
  transition: all .2s cubic-bezier(0.17,0.04,0.03,0.94);
  box-shadow: none;
  text-align: center;
  -webkit-transition: background-color none;
  transition: background-color none;
  padding: 0;
  border-radius: 0;
  color: inherit;
  font-size: inherit;
  background-color: transparent;
  box-shadow: none;
  border: none;
  font-weight: 400;
  position: absolute;
  top: 0.1rem;
  right: 1.5rem;
  color: #d1372e;
}

.emotion-3:hover,
.emotion-3:focus {
  color: white;
  background-color: #184673;
  border: 2px solid #184673;
}

.emotion-3[disabled] {
  color: #777777;
  background-color: #e6e6e6;
  border-color: transparent;
  cursor: not-allowed;
}

.emotion-3:focus {
  box-shadow: 0 0 2px #20588f;
}

.emotion-3:hover,
.emotion-3:active,
.emotion-3:disabled,
.emotion-3:focus {
  box-shadow: none;
  color: #20588f;
  background-color: transparent;
  border: none;
}

.emotion-3:focus {
  outline-width: medium;
}

.emotion-3:hover,
.emotion-3:focus {
  color: #7d211c;
}

<div>
  <div
    autocapitalize="false"
    autocorrect="false"
    contenteditable="true"
    data-slate-editor="true"
    data-slate-node="value"
    role="textbox"
    spellcheck="false"
    style="position: relative; outline: none; white-space: pre-wrap; word-wrap: break-word;"
    zindex="-1"
  >
    <div
      data-slate-node="element"
      style="position: relative;"
    >
      <div
        data-slate-node="element"
        style="position: relative;"
      >
        <span
          data-slate-node="text"
        >
          <span
            data-slate-leaf="true"
          >
            <span
              data-slate-length="0"
              data-slate-zero-width="n"
            >
              ﻿
              <br />
            </span>
          </span>
        </span>
      </div>
    </div>
  </div>
  <div
    class="emotion-27 emotion-28"
    contenteditable="false"
  >
    <div
      aria-hidden="true"
      class="emotion-0 emotion-1"
    />
    <div
      class="emotion-25 emotion-26"
    >
      <h1
        class="c-section-heading c-related-articles__component-title"
      >
        Relatert innhold
      </h1>
      <p>
        Dra artikkel for å endre rekkefølge
      </p>
      <div
        class="emotion-11 emotion-12"
      >
        <div
          class="drop-zone emotion-9 emotion-10"
        >
          <div
            aria-roledescription="Draggable item. Press space bar to lift"
            class="drag-item"
            data-react-beautiful-dnd-drag-handle="0"
            data-react-beautiful-dnd-draggable="0"
            draggable="false"
            tabindex="0"
          >
            <div
              class="emotion-7 emotion-8"
            >
              <article
                class="c-related-articles__item c-related-articles__item--external-learning-resources"
              >
                <h3
                  class="c-related-articles__title"
                >
                  <div
                    class="c-content-type-badge c-content-type-badge--external-learning-resources c-content-type-badge--small c-content-type-badge--background c-content-type-badge--border"
                  >
                    <svg
                      class="c-icon"
                      data-license="Apache License 2.0"
                      data-source="Material Design"
                      fill="currentColor"
                      height="1em"
                      preserveAspectRatio="xMidYMid meet"
                      style="vertical-align: middle;"
                      viewBox="0 0 24 24"
                      width="1em"
                    >
                      <g>
                        <g
                          fill="none"
                          fill-rule="evenodd"
                          stroke="none"
                          stroke-width="1"
                        >
                          <g>
                            <g>
                              <polygon
                                points="0 0 24 0 24 24 0 24"
                              />
                              <path
                                d="M3.9,12 C3.9,10.29 5.29,8.9 7,8.9 L11,8.9 L11,7 L7,7 C4.24,7 2,9.24 2,12 C2,14.76 4.24,17 7,17 L11,17 L11,15.1 L7,15.1 C5.29,15.1 3.9,13.71 3.9,12 Z M8,13 L16,13 L16,11 L8,11 L8,13 Z M17,7 L13,7 L13,8.9 L17,8.9 C18.71,8.9 20.1,10.29 20.1,12 C20.1,13.71 18.71,15.1 17,15.1 L13,15.1 L13,17 L17,17 C19.76,17 22,14.76 22,12 C22,9.24 19.76,7 17,7 Z"
                                fill="currentColor"
                                fill-rule="nonzero"
                              />
                            </g>
                          </g>
                        </g>
                      </g>
                    </svg>
                  </div>
                  <span
                    class="c-related-articles__link-wrapper"
                  >
                    <a
                      class="c-related-articles__link"
                      href="https://www.vg.no"
                      rel="noopener noreferrer"
                      target="_blank"
                    >
                      Verdens gang
                    </a>
                  </span>
                </h3>
                <p
                  class="c-related-articles__description"
                />
                <p
                  class="c-related-articles__link-info"
                >
                  Nettside hos www.vg.no
                </p>
              </article>
              <button
                class="emotion-2 emotion-3 emotion-4"
                type="button"
              >
                <div
                  data-tooltip="true"
                  data-tooltip-id="1"
                  data-tooltip-label="Endre ekstern artikkel"
                >
                  <span
                    data-reach-tooltip-trigger=""
                    data-state="tooltip-hidden"
                    data-tooltip-children="true"
                  >
                    <svg
                      class="c-icon"
                      data-license="Apache License 2.0"
                      data-source="Material Design"
                      fill="currentColor"
                      height="1em"
                      preserveAspectRatio="xMidYMid meet"
                      style="vertical-align: middle;"
                      viewBox="0 0 24 24"
                      width="1em"
                    >
                      <g>
                        <path
                          d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34c-.39-.39-1.02-.39-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
                        />
                        <path
                          d="M0 0h24v24H0z"
                          fill="none"
                        />
                      </g>
                    </svg>
                  </span>
                </div>
              </button>
              <button
                class="emotion-5 emotion-4"
                contenteditable="false"
                data-cy="close-related-button"
                title="Slett ekstern artikkel"
                type="button"
              >
                <svg
                  class="c-icon"
                  data-license="Apache License 2.0"
                  data-source="Material Design"
                  fill="currentColor"
                  height="1em"
                  preserveAspectRatio="xMidYMid meet"
                  style="vertical-align: middle;"
                  viewBox="0 0 24 24"
                  width="1em"
                >
                  <g>
                    <path
                      d="M0 0h24v24H0V0z"
                      fill="none"
                    />
                    <path
                      d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zm2.46-7.12l1.41-1.41L12 12.59l2.12-2.12 1.41 1.41L13.41 14l2.12 2.12-1.41 1.41L12 15.41l-2.12 2.12-1.41-1.41L10.59 14l-2.13-2.12zM15.5 4l-1-1h-5l-1 1H5v2h14V4z"
                    />
                    <path
                      d="M0 0h24v24H0z"
                      fill="none"
                    />
                  </g>
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="emotion-7 emotion-8"
        data-cy="styled-article-modal"
      >
        <div
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-labelledby="downshift-0-label"
          role="combobox"
          style="position: relative;"
        >
          <div>
            <div
              class="emotion-15 emotion-16"
            >
              <div
                class="emotion-13 emotion-14"
              >
                <input
                  aria-autocomplete="list"
                  aria-labelledby="downshift-0-label"
                  autocomplete="off"
                  data-testid="dropdownInput"
                  id="downshift-0-input"
                  placeholder="Søk på tittel"
                  value=""
                />
                <svg
                  class="c-icon"
                  data-license="Apache License 2.0"
                  data-source="Material Design"
                  fill="currentColor"
                  height="1em"
                  preserveAspectRatio="xMidYMid meet"
                  style="vertical-align: middle;"
                  viewBox="0 0 48 48"
                  width="1em"
                >
                  <g>
                    <path
                      d="M31 28h-1.59l-.55-.55C30.82 25.18 32 22.23 32 19c0-7.18-5.82-13-13-13S6 11.82 6 19s5.82 13 13 13c3.23 0 6.18-1.18 8.45-3.13l.55.55V31l10 9.98L40.98 38 31 28zm-12 0c-4.97 0-9-4.03-9-9s4.03-9 9-9 9 4.03 9 9-4.03 9-9 9z"
                    />
                  </g>
                </svg>
              </div>
            </div>
          </div>
        </div>
        <div
          class="emotion-17 emotion-18"
        >
          Eller
        </div>
        <button
          class="emotion-19 emotion-4"
          data-testid="showAddExternal"
          type="button"
        >
          Legg til ekstern artikkel
        </button>
      </div>
      <button
        class="emotion-5 emotion-4"
        contenteditable="false"
        data-cy="close-related-button"
        type="button"
      >
        <svg
          class="c-icon"
          data-license="Apache License 2.0"
          data-source="Material Design"
          fill="currentColor"
          height="1em"
          preserveAspectRatio="xMidYMid meet"
          style="vertical-align: middle;"
          viewBox="0 0 24 24"
          width="1em"
        >
          <g>
            <path
              d="M0 0h24v24H0V0z"
              fill="none"
            />
            <path
              d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zm2.46-7.12l1.41-1.41L12 12.59l2.12-2.12 1.41 1.41L13.41 14l2.12 2.12-1.41 1.41L12 15.41l-2.12 2.12-1.41-1.41L10.59 14l-2.13-2.12zM15.5 4l-1-1h-5l-1 1H5v2h14V4z"
            />
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
          </g>
        </svg>
      </button>
    </div>
  </div>
  <div
    class="emotion-29"
    contenteditable="false"
    data-testid="relatedWrapper"
    draggable="true"
    role="button"
    tabindex="0"
  >
    <section
      class="c-related-articles"
    >
      <h2
        class="c-section-heading c-related-articles__component-title"
      >
        Relatert innhold
      </h2>
      <div
        class="c-related-articles__articles"
      >
        <article
          class="c-related-articles__item c-related-articles__item--external-learning-resources"
        >
          <h3
            class="c-related-articles__title"
          >
            <div
              class="c-content-type-badge c-content-type-badge--external-learning-resources c-content-type-badge--small c-content-type-badge--background c-content-type-badge--border"
            >
              <svg
                class="c-icon"
                data-license="Apache License 2.0"
                data-source="Material Design"
                fill="currentColor"
                height="1em"
                preserveAspectRatio="xMidYMid meet"
                style="vertical-align: middle;"
                viewBox="0 0 24 24"
                width="1em"
              >
                <g>
                  <g
                    fill="none"
                    fill-rule="evenodd"
                    stroke="none"
                    stroke-width="1"
                  >
                    <g>
                      <g>
                        <polygon
                          points="0 0 24 0 24 24 0 24"
                        />
                        <path
                          d="M3.9,12 C3.9,10.29 5.29,8.9 7,8.9 L11,8.9 L11,7 L7,7 C4.24,7 2,9.24 2,12 C2,14.76 4.24,17 7,17 L11,17 L11,15.1 L7,15.1 C5.29,15.1 3.9,13.71 3.9,12 Z M8,13 L16,13 L16,11 L8,11 L8,13 Z M17,7 L13,7 L13,8.9 L17,8.9 C18.71,8.9 20.1,10.29 20.1,12 C20.1,13.71 18.71,15.1 17,15.1 L13,15.1 L13,17 L17,17 C19.76,17 22,14.76 22,12 C22,9.24 19.76,7 17,7 Z"
                          fill="currentColor"
                          fill-rule="nonzero"
                        />
                      </g>
                    </g>
                  </g>
                </g>
              </svg>
            </div>
            <span
              class="c-related-articles__link-wrapper"
            >
              <a
                class="c-related-articles__link"
                href="https://www.vg.no"
                rel="noopener noreferrer"
                target="_blank"
              >
                Verdens gang
              </a>
            </span>
          </h3>
          <p
            class="c-related-articles__description"
          />
          <p
            class="c-related-articles__link-info"
          >
            Nettside hos www.vg.no
          </p>
        </article>
      </div>
    </section>
  </div>
</div>
`;
